k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social
  template:
    metadata:
      labels:
        app: social
    spec:
      containers:
        - name: fm-social
          image: 10.0.0.70:8090/fm-social:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1.5G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: k8s-node-1
      securityContext: {}
      imagePullSecrets:
        - name: nexus-registry-secret
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
