k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fm-social.finmates.com
      secretName: tls-secret
  rules:
    - host: fm-social.finmates.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social
                port:
                  number: 80
